--- a/style.css
+++ b/style.css
@@ -8,26 +8,23 @@ button, select {
     margin: 5px;
 }
 
-.container {
+.seller {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     margin: 0 auto;
 }
-
-@media (max-width: 900px) {
-    .container {
-        width: 95vw;
-    }
+.buyer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0 auto;
+}
+.container {
+    display: flex;
 }
 
-@media (min-width: 901px) {
-    .container {
-        width: 80vw;
-    }
-}
-
-.shapley-container, .characteristic-container {
+.seller-container {
     margin-bottom: 20px;
     width: 100%;
     display: flex;
@@ -35,7 +32,7 @@ button, select {
     align-items: center;
 }
 
-.characteristic-container {
+.seller-container {
     flex-wrap: wrap;
     justify-content: center;
 }
@@ -49,7 +46,7 @@ button, select {
     flex-direction: row;
 }
 
-.cell-container {
+.cell-container, .buyercell-container {
     display: inline-flex;
     flex-direction: column;
 }
@@ -76,9 +73,9 @@ button, select {
     border-bottom: white 2px solid;
 }
 
-    .cell-bottom > input {
-        width: 95%;
-    }
+.cell-bottom > input {
+    width: 95%;
+}
 
 .cell-wide {
     width: 100px;
@@ -96,10 +93,10 @@ button, select {
     display: inline-block;
 }
 
-    .cell-wide > div > span:first-child {
-        width: 75px;
-    }
+.cell-wide > div > span:first-child {
+    width: 75px;
+}
 
-    .cell-wide > div > span:last-child {
-        width: 125px;
-    }
+.cell-wide > div > span:last-child {
+    width: 125px;
+}
