--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     width: 100%;
+    z-index: 2;
 }
 
 button, select {
@@ -13,6 +14,11 @@ button, select {
     flex-direction: column;
     align-items: flex-start;
     margin: 0 auto;
+}
+svg {
+    background-color: transparent;
+    position: absolute;
+    z-index:3;
 }
 .buyer {
     display: flex;
@@ -95,7 +101,21 @@ button, select {
 .matching-container .cell-wide {
     width: 200px;
 }
-
+.matching-container .cell-bottom {
+    flex: 1;
+    flex-wrap: wrap;
+    text-align: center;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 400px;
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 .cell-wide:not(.cell-bottom) > div > span {
     border-top: white 1px solid;
 }
